--- a/style.css
+++ b/style.css
@@ -45,3 +45,147 @@ article {
 footer {
     background: var(--lighter-primary-color);
 }
+
+/* NavBar */
+header .navbar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    box-sizing: border-box;
+    background-color: var(--primary-color);
+    overflow: hidden;
+}
+.navbar .limonade {
+    display: flex;
+    align-items: center;
+}
+.navbar .limonade .logo {
+    width: 35px;
+}
+.navbar .limonade h1 {
+    color: var(--secondary-color);
+}
+.navbar .nav-link ul {
+    display: flex;
+}
+.navbar .nav-link ul li a {
+    display: inline-block;
+    color: var(--secondary-color);
+    padding: 30px;
+    font-family: "Poiret One", serif;
+    letter-spacing: 1pt;
+    font-size: 14pt;
+    font-weight: bold;
+}
+.navbar .nav-link ul li a:hover {
+    background-color: var(--secondary-color) ;
+    color: var(--primary-color);
+    font-weight: bolder;
+}
+.responsive {
+    display: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 20px 100% 15px 30px;
+    background-color: var(--lighter-primary-color);
+}
+.responsive label {
+    width: 30px;
+    height: 4px;
+    background-color: var(--secondary-color);
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    cursor: pointer;
+    border-radius: 16px;
+
+    &::before, &::after {
+        content: " ";
+        width: 30px;
+        height: 4px;
+        background-color: var(--secondary-color);
+        position: absolute;
+        display: block;
+        border-radius: 16px;
+        transition: all 0.7s ease;
+    }
+
+    &::before {
+        bottom: 9px;
+        left: 0;
+        transform-origin: left top;
+    }
+
+    &::after {
+        top: 9px;
+        left: 0;
+        transform-origin: left bottom;
+    }
+}
+#menu-hamburger:checked ~label::before {
+    transform: rotateZ(40deg);
+}
+#menu-hamburger:checked ~label::after {
+    transform: rotateZ(-40deg);
+}
+#menu-hamburger:checked ~label {
+    background-color: var(--lighter-primary-color);
+}
+#menu-hamburger ~label {
+    transition: all 0.6s ease;
+}
+#menu-hamburger {
+    display: none;
+}
+@media screen and (max-width: 767px) {
+    header .navbar {
+        width: 100vw;
+        height: 100vh;
+        background-color: transparent;
+    }
+    .navbar .limonade .logo {
+        width: 30px;
+        position: absolute;
+        top: 1px;
+        left: 15px;
+        z-index: 1;
+    }
+    .navbar .limonade h1{
+        display: none;
+    }
+    .navbar .responsive {
+        display: block;
+    }
+    .navbar .nav-link {
+        position: absolute;
+        top: 0;
+        right: 0;
+        background-color: var(--lighter-primary-color);
+        backdrop-filter: blur(5px);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-right: -100%;
+        transition: all 0.5s ease;
+    }
+    .nav-link.mobile-menu {
+        margin-right: 0;
+        width: 100%;
+        height: 100vh;
+    }
+    .navbar .nav-link ul {
+        flex-direction: column;
+        align-items: center;
+    }
+    .navbar .nav-link ul li {
+        font-size: 1.5em;
+        font-weight: bolder;
+    }
+}
+/* Fin NavBar */
