--- a/style.css
+++ b/style.css
@@ -18,406 +18,525 @@
     --argentina : #6CACE4;
 }
 
-main {
-  background: url(./images/bubble_pattern_v3_resize.jpg) repeat fixed;
-}
-
-
-p {
-    font-family: "Montserrat", sans-serif;
-    font-size: 12pt;
-    margin-bottom: 8px;
-    text-align: justify;
-}
-
-h1, h2 {
-  font-family: "Poiret One", serif;
-  letter-spacing: 1pt;
-  font-size: 24pt;
-  font-weight: bold;
-  text-align: center;
-  padding: 8px 0px 16px 0px;
-}
-
-.blackpink h2 {
-  color: var(--blackpink);
-}
-
-article.euro h2 {
-  color: var(--euromillions);
-}
-
-.Scaloneta h2 {
-  color: var(--argentina);
-}
-
-section {
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
-  margin-bottom: 16px;
-}
-
-section:nth-of-type(2n+2) {
-  color: var(--secondary-color);
-  background: linear-gradient(0.75turn, var(--primary-color), var(--lighter-primary-color));
-  z-index: -2;
-}
-
-section:nth-of-type(2n+2) p {
-    color: var(--secondary-color);
-}
-
-img.logo {
-  width: 300px;
-  height: 300px;
-  display: block;
-  margin: auto;
-  object-fit: scale-down;
-}
-
-main article {
-    display: flex;
-    justify-content: center;
-    margin-top: 32px;
-}
-
-
-
-main article img {
-    width: 250px;
-    height: 250px;
-    border-radius: 200px;
-    position: relative;
-    z-index: 1;
+ {
   
 }
 
-.lien {
+/* Style du header du site et NavBar */
+.headerNavbar {
+  /* margin-bottom: 82px; */
+  background-color: var(--primary-color);
+  height: 55px;
+  box-sizing: border-box;
+  align-items: center;
   display: flex;
   flex-flow: row nowrap;
-  justify-content: space-evenly;
-  margin-top: 32px;
+  justify-content: space-between;
+
+  .navbar {
+    width: 100%;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-between;
+    overflow: hidden;
+
+    img {
+      max-width: 30px;
+      height: auto;
+      margin: 0;
+      }
+
+    .limonade {
+      display: flex;
+      justify-content: space-evenly;
+      gap: 24px;
+      align-items: center;
+      padding: 0px 32px;
+      max-height:fit-content;
+      /* position: absolute;
+      top: 5px;
+      left: 15px; */   
+    }
+
+    h2 {
+      font-family: "Poiret One", serif;
+      letter-spacing: 1pt;
+      font-size: 20pt;
+      padding: 0;
+      font-weight: bold;
+      color: var(--secondary-color);
+    }
+
+    .nav-link {
+      
+      padding: 0px 24px;
+
+      ul {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+
+        li a {
+          display: inline-block;
+          color: var(--secondary-color);
+          font-family: "Poiret One", serif;
+          letter-spacing: 1pt;
+          font-size: 14pt;
+          font-weight: bolder;
+          padding: 16px;
+        }
+      }
+
+      
+
+    }
+  }
+
+  /* Style Menu burger */
+  .responsive {
+    display: none;
+    /* position: absolute;
+    top: 0;
+    right: 0; */
+    background-color: var(--primary-color);
+
+    label {
+      width: 30px;
+      height: 4px;
+      background-color: var(--secondary-color);
+      position: absolute;
+      top: 25px;
+      right: 20px;
+      cursor: pointer;
+      border-radius: 16px;
+      z-index: 3;
+    
+      &::before, &::after {
+          content: " ";
+          width: 30px;
+          height: 4px;
+          background-color: var(--secondary-color);
+          position: absolute;
+          display: block;
+          border-radius: 16px;
+          transition: all 0.7s ease;
+      }
+    
+      &::before {
+          bottom: 9px;
+          left: 0;
+          transform-origin: left top;
+      }
+    
+      &::after {
+          top: 9px;
+          left: 0;
+          transform-origin: left bottom;
+      }
+    }
+
+    #menu-hamburger {
+    
+      display: none;
+
+      &:checked {
+        &~label::before{
+          transform: rotateZ(40deg);
+        }
+
+        &~label::after{
+          transform: rotateZ(-40deg);
+        }
+        ~label {
+          background-color: var(--primary-color);
+        }
+      }
+
+      &~label {
+        transition: all 0.6s ease;
+      }
+    }
+  }
 }
 
-main article button {
-  display: inline-block;
-  padding: 8px 32px;
-  border-radius: 4px;
-  font-size: 12pt;
-  text-transform: uppercase;
-}
+/* Style de main */
+main {
+  background: url(./images/bubble_pattern_v3_resize.jpg) repeat fixed;
+  padding-top: 32px;
+  padding-bottom: 16px;
 
-main article button a {
-  color: var(--primary-color);
-}
 
-/* Bordure décalée en pointillée image et paragraphe */
-.contenu {
-  margin-left: 16px;
-  padding: 8px;
-  position: relative;
-}
+/* Style commun à toutes les sections */
+  section {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    margin-bottom: 16px;
+  
+        h1, h2 {
+          font-family: "Poiret One", serif;
+          letter-spacing: 1pt;
+          font-size: 24pt;
+          font-weight: bold;
+          text-align: center;
+          padding: 8px 0px 16px 0px;
+        }
+      
+        p {
+          color: var(--lighter-primary-color);
+          font-family: "Montserrat", sans-serif;
+          font-size: 12pt;
+          margin-bottom: 8px;
+        }
+      
+        header {
+          background: linear-gradient(0.75turn, var(--lighter-primary-color), var(--primary-color));
+          color: var(--secondary-color);
+          padding: 32px;
+          border-radius: 32px;
+      
+              h1 {
+                text-transform: uppercase;
+                font-weight: bolder;
+                letter-spacing: 3pt;
+                display: inline-block;
+                background: linear-gradient(to right,var(--blackpink), var(--argentina), var(--euromillions));
+                -webkit-background-clip: text;
+                -webkit-text-fill-color: transparent;
+              }
+          
+              p {
+                color: var(--secondary-color);
+              }
+        }
+          
+        article {
+          display: flex;
+          justify-content: center;
+          margin-top: 32px;
+        
+              img {
+                width: 250px;
+                height: 250px;
+                border-radius: 200px;
+                position: relative;
+                z-index: 1;
+                }
 
-.bordure-decalee {
-  position: relative;
-  max-width: 250px;
-  max-height: 250px;
-  padding: 16px;
+              .lien {
+                display: flex;
+                flex-flow: row nowrap;
+                justify-content: space-evenly;
+                margin-top: 32px;
+              }
+
+              button {
+                display: inline-block;
+                padding: 8px 32px;
+                border-radius: 4px;
+                font-size: 12pt;
+                text-transform: uppercase;
+
+                    a {
+                      color: var(--primary-color);
+                    }
+              }
+
+              /* Bordure décalée en pointillée image et paragraphe */
+              .contenu {
+                margin-left: 16px;
+                padding: 8px;
+                position: relative;
+                z-index: 1;
+              }
+              
+              /* Bordure pointillée des images seulement */
+              .bordure-decalee {
+                position: relative;
+                max-width: 250px;
+                max-height: 250px;
+                padding: 16px;
+
+                    &:after {   
+                      content: "";
+                      border-radius: 250px;
+                      box-sizing: border-box;
+                      display: block;
+                      position: absolute;
+                      height: 250px;
+                      width: 250px;
+                      top: 20px;
+                      left: 25px;
+                      z-index: 0;
+                    }        
+              }
+        }
+  
+        .blackpink, .euro, .Scaloneta {
+          text-align: center;
+        }  
+
+        .blackpink {
+          h2 {
+          color: var(--blackpink);
+          }
+      
+          .bordure-decalee:after {
+            border: 3px dashed var(--blackpink);
+          }
+      
+          button {
+            background: var(--blackpink);
+          }
+        }
+      
+        .euro {
+            h2 {
+            color: var(--euromillions);
+            }
+      
+            .bordure-decalee:after {
+              border: 3px dashed var(--euromillions);
+            }
+      
+            button {
+              background: var(--euromillions);
+            }
+          } 
+      
+        .Scaloneta {
+            h2 {
+            color: var(--argentina);
+            }
+      
+            .bordure-decalee:after {
+              border: 3px dashed var(--argentina);
+            }
+      
+            button {
+              background: var(--argentina);
+            }
+          }           
+      }
+  section:last-of-type {
+    margin-bottom: none;
   }
   
-.bordure-decalee:after {   
-    content: "";
-    border-radius: 250px;
-    box-sizing: border-box;
-    display: block;
-    position: absolute;
-    height: 250px;
-    width: 250px;
-    top: 20px;
-    left: 25px;
-    z-index: 0;
-}
+      :has(span) {
+        .blackpink {
+            color: var(--blackpink);
+        }
+    
+        .euro {
+            color: var(--euromillions);
+        }
+    
+        .Scaloneta {
+            color: var(--argentina);
+        }
+      }
+    
+/*Style des sections paires */
+  section:nth-of-type(2n+2) {
+    color: var(--secondary-color);
+    background: linear-gradient(0.75turn, var(--primary-color), var(--lighter-primary-color));
+    z-index: -2;
 
+        p {
+          color: var(--secondary-color);
+        }
+  }
 
-.blackpink .bordure-decalee:after {
-  border: 3px dashed var(--blackpink);
-}
-
-.euro .bordure-decalee:after {
-  border: 3px dashed var(--euromillions);
-}
-
-.Scaloneta .bordure-decalee:after {
-  border: 3px dashed var(--argentina);
-}
-/* Fin bordure décalée en pointillée image et paragraphe */
-
-
-.blackpink, article.euro, .Scaloneta {
-  text-align: center;
-}
-
-span.blackpink {
-  color: var(--blackpink);
-}
-
-span.euro {
-  color: var(--euromillions);
-}
-
-span.Scaloneta {
-  color: var(--argentina);
-}
-
-.blackpink button {
-  background: var(--blackpink);
-}
-
-.euro button {
-  background: var(--euromillions);
-}
-
-.Scaloneta button {
-  background: var(--argentina);
-}
-
+  }
+/* Fin style de main */
 
 
 /* Ecran d'ordinateur*/
 @media screen and (min-width: 1112px) {
-  main article {
-    flex-flow: row nowrap;
-    align-items:flex-start;
-    width: calc(100vw - 200px);
-    max-width: 1300px;
-    }
+  .navbar .nav-link ul li a {
+    margin-right: 24px;
+  }
 
+  main {
+
+  /* style général des sections */
     section {
-    padding: 48px 32px 48px 32px;
+
+      padding: 48px 32px 48px 32px;
+
+      header {
+        width: calc(100vw - 400px);
+        margin-bottom: 48px;
+      }
+
+      article {
+        flex-flow: row nowrap;
+        align-items:flex-start;
+        width: calc(100vw - 200px);
+        max-width: 1300px;
+
+          .contenu:after {   
+            content: "";
+            box-sizing: border-box;
+            display: block;
+            position: absolute;
+            height: calc(100% - 70px);
+            width: 100%;
+            z-index: -1;  
+          }
+
+
+        }
     }
 
-    section:nth-of-type(2n+2) article {
-      flex-flow: row-reverse nowrap;      
+    /* style des section paires */
+    section:nth-of-type(2n+2) {
+    article {
+      flex-flow: row-reverse nowrap;
+
+      .contenu:after {   
+        rotate: -1.5deg;
+        top: 0px;
+        right: 24px;
+        border-radius: 6px 0px 0px 0px;   
+      }      
+    }
+  } 
+
+    /* style des section impaires */
+    section:nth-of-type(2n+1) {
+      .contenu:after {
+        rotate: 1.5deg;
+        top: 0px;
+        left: 16px;
+        border-radius: 0px 6px 0px 0px;
+      }
+
     }
 
-    .contenu:after {   
-      content: "";
-      box-sizing: border-box;
-      display: block;
-      position: absolute;
-      height: calc(100% - 70px);
-      width: 100%;
-      z-index: 0;   
-    }
+  }
 
-    section:nth-of-type(2n+1) .contenu:after {
-      rotate: 1.5deg;
-      top: 0px;
-      left: 16px;
-      border-radius: 0px 6px 0px 0px;   
-    }
-
-    section:nth-of-type(2n+2) .contenu:after {   
-      rotate: -1.5deg;
-      top: 0px;
-      right: 24px;
-      border-radius: 6px 0px 0px 0px;   
-    }
-    
-    .blackpink .contenu:after {
+  .blackpink {
+    .contenu:after {
       border-top: 3px dashed var(--blackpink);
       border-right: 3px dashed var(--blackpink);
     
     }
-    
-    .euro .contenu:after {
+  }
+  
+  .euro {
+    .contenu:after {
       border-top: 3px dashed var(--euromillions);
       border-left: 3px dashed var(--euromillions);
     }
-    
-    .Scaloneta .contenu:after {
+  }
+
+  .Scaloneta {
+    .contenu:after {
       border-top: 3px dashed var(--argentina);
       border-right: 3px dashed var(--argentina);
     }
+  }
+    
 }
 
 /* Ecran de tablette et téléphone */
 @media screen and (max-width: 1111px) {
-  section {
-    padding: 16px 32px;
-    }
+                                                                                        /* .headerNavbar {
+                                                                                          margin-bottom: 32px;
+                                                                                        } */
   
-  main article {
-  flex-flow: column nowrap;
-  align-items: center;
-  width: calc(100vw- 64px);
-  }
+  main {
+      section {
+        padding: 16px 32px;
+      
+    
+        header {
+          width: calc(100vw - 180px);
+          margin-bottom: 32px;
+        }
+
+        article {
+          flex-flow: column nowrap;
+          align-items: center;
+          width: calc(100vw- 64px);
+          }
+    }
+
+  } 
 
   .blackpink button, .euro button, .Scaloneta button {
     display: none;
   }
 }
 
-/* NavBar */
-.headerNavbar {
-  margin-bottom: 82px;
-}
-header .navbar {
-  position: absolute;
-  top: 0;
-  left: 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  box-sizing: border-box;
-  background-color: var(--primary-color);
-  overflow: hidden;
-}
-.navbar .limonade {
-  display: flex;
-  align-items: center ;
-  padding: 16px 32px;
-}
-.navbar .logo {
-  width: 35px;
-  height: auto;
-  margin: 0;
-}
-.navbar .limonade h2 {
-  font-family: "Poiret One", serif;
-  letter-spacing: 1pt;
-  font-size: 20pt;
-  padding: 0;
-  font-weight: bold;
-  color: var(--secondary-color);
-}
-.navbar .nav-link ul {
-  display: flex;
-  padding: 16px 24px;
-  align-items: center;
-}
-.navbar .nav-link ul li a {
-  display: inline-block;
-  color: var(--secondary-color);
-  padding-right: 24px;
-  font-family: "Poiret One", serif;
-  letter-spacing: 1pt;
-  font-size: 14pt;
-  font-weight: bolder;
-}
-.responsive {
-  display: none;
-  position: absolute;
-  top: 0;
-  right: 0;
-  background-color: var(--primary-color);
-}
-.responsive label {
-  width: 30px;
-  height: 4px;
-  background-color: var(--secondary-color);
-  position: absolute;
-  top: 17px;
-  right: 15px;
-  cursor: pointer;
-  border-radius: 16px;
-  z-index: 3;
-
-  &::before, &::after {
-      content: " ";
-      width: 30px;
-      height: 4px;
-      background-color: var(--secondary-color);
-      position: absolute;
-      display: block;
-      border-radius: 16px;
-      transition: all 0.7s ease;
-  }
-
-  &::before {
-      bottom: 9px;
-      left: 0;
-      transform-origin: left top;
-  }
-
-  &::after {
-      top: 9px;
-      left: 0;
-      transform-origin: left bottom;
-  }
-}
-#menu-hamburger:checked ~label::before {
-  transform: rotateZ(40deg);
-}
-#menu-hamburger:checked ~label::after {
-  transform: rotateZ(-40deg);
-}
-#menu-hamburger:checked ~label {
-  background-color: var(--primary-color);
-}
-#menu-hamburger ~label {
-  transition: all 0.6s ease;
-}
-#menu-hamburger {
-  display: none;
-}
+/* Navbar responsive */
 @media screen and (max-width: 982px) {
-  header .navbar {
-      width: 100vw;
-      height: 100vh;
-      background-color: transparent;
+
+  .headerNavbar {
+      .navbar {
+          background-color: transparent;
+      
+
+          .limonade {
+              /* position: absolute;
+              top: 0;
+              left: 0; */
+              /* width: 100vw; */
+              height: 38px;
+              box-sizing: border-box;
+              background-color: var(--primary-color);
+
+              img {
+                height: 40px;
+                width: auto;
+              }
+
+              h2 { 
+                  display: none;
+              }
+          }
+
+          .nav-link {
+              position: absolute;
+              display: none;
+              top: 0;
+              right: -100vw;
+              background-color: var(--primary-color);
+              opacity: 0.97;
+              transition: all 0.4s ease;
+              z-index: 2;
+
+                  ul {
+                      flex-flow: column nowrap;
+                      align-items: center;
+                      height: 100vh;
+                      width: 100vw;
+
+                      li {
+                          font-size: 5em;
+                          font-weight: bolder;
+                      }
+                  }
+              }
+              
+          .mobile-menu {
+            display: block;
+            margin-right: 0;
+            top: 0px;
+            left: 0px;
+            padding: 0px;
+          }
+      }
+
+      .responsive {
+          display: block;
+      }
   }
-  .navbar .limonade {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 38px;
-      box-sizing: border-box;
-      background-color: var(--primary-color);
-  }
-  .navbar .limonade .logo {
-    position: absolute;
-    top: 2px;
-    left: 15px;
-    width: 30px;
-  }
-  .navbar .limonade h2{
-      display: none;
-  }
-  .navbar .responsive {
-      display: block;
-  }
-  .navbar .nav-link {
-      position: absolute;
-      top: 0;
-      right: 0;
-      background-color: var(--primary-color);
-      opacity: 0.97;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      margin-right: -100%;
-      transition: all 0.4s ease;
-      z-index: 2;
-  }
-  .nav-link.mobile-menu {
-      margin-right: 0;
-      width: 100%;
-      height: 100vh;
-  }
-  .navbar .nav-link ul {
-      flex-direction: column;
-      align-items: center;
-  }
-  .navbar .nav-link ul li {
-      font-size: 5em;
-      font-weight: bolder;
-  }
+
 }
+
 /* Fin NavBar */
 
 /* Footer */
